[package]
name = "yew-merkle-tree"
version = "0.1.1"
authors = ["Gheorghe Technologies SRL"]
edition = "2021"
license = "GPL-2.0"

[dependencies]
gloo-console = "0.2"
js-sys = "0.3"
yew = { version = "0.19.3" }
wasm-bindgen = "0.2"
base62 = "2.0.0"
gloo-utils = "0.1.4"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

